--- a/css/utilities.css
+++ b/css/utilities.css
@@ -42,3 +42,33 @@
     background: #f4f4f4;
     color: #333;
 }
+
+/* flex items */
+
+.flex-items {
+    display: flex;
+    text-align: center;
+    justify-content: center;
+    text-align: center;
+    height: 100%;
+}
+
+.flex-items > div {
+    padding: 20px;
+
+}
+
+/* Flex columns */
+
+.flex-columns .row {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    width: 100%;
+}
+
+.flex-columns .column {
+    display: flex;
+    flex-direction: column;
+    flex-basis: 100%;
+}
