--- a/css/style.css
+++ b/css/style.css
@@ -47,8 +47,12 @@ img {
     position: fixed;
     top: 0 px;
     padding: 0 30px;
+    transition: 0.5s;
 }
 
+.navbar.top {
+     background: transparent;
+}
 .navbar a {
     color:#fff;
     padding: 10px 20px;
